<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".SignUpActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_activity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/sign_up"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:gravity="center"
            android:text="@string/sign_up_description_text"
            android:textColor="@color/secondary"
            android:textSize="13sp" />

        <androidx.cardview.widget.CardView
            android:layout_marginTop="@dimen/auth_screen_card_margin_top"
            app:cardElevation="@dimen/card_elevation"
            app:cardCornerRadius="@dimen/card_corner_radius"
            app:contentPadding="@dimen/card_layout_content_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_marginTop="@dimen/auth_screen_til_margin_top"
                    android:layout_marginStart="@dimen/auth_screen_til_margin_start_end"
                    android:layout_marginEnd="@dimen/auth_screen_til_margin_start_end"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name"
                        android:inputType="textEmailAddress"
                        android:textSize="@dimen/et_text_size" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/auth_screen_til_margin_start_end"
                    android:layout_marginTop="@dimen/auth_screen_til_margin_top"
                    android:layout_marginEnd="@dimen/auth_screen_til_margin_start_end">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:textSize="@dimen/et_text_size" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="16dp">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textSize="16sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btn_sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/btn_marginStartEnd"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="@dimen/btn_marginStartEnd"
                    android:background="@drawable/main_button_1"
                    android:foreground="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:paddingTop="@dimen/btn_paddingTopBottom"
                    android:paddingBottom="@dimen/btn_paddingTopBottom"
                    android:text="@string/sign_up"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/btn_text_size" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</LinearLayout>
